--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node-dev ./src/server.ts",
-    "start": "nodemon ./dist/server.js",
+    "start": "ts-node-dev ./src/server.ts",
     "prod": "npm run build && npm run start"
   },
   "keywords": [],
