--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,13 @@
     "@types/node": "12.11.2",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/styled-components": "^4.1.19",
+    "macy": "^2.5.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-masonry-component": "^6.2.1",
     "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0",
     "typescript": "3.6.4"
   },
   "scripts": {
