--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,8 +6,7 @@
     "sourceMap": true,
     "target": "es6",
     "outDir": "./dist",
-    "baseUrl": "./src",
-    "noImplicitAny": true
+    "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
