Change tsconfig rules

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,9 @@
     "sourceMap": true,
     "target": "es6",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "noImplicitAny": true,
+    "strict": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
